implement API to support dashboard
